force-app/main/default/objects/Broker_Commission__c/Broker_Commission__c.object-meta.xml
<CustomObject>
    <label>Broker Commission</label>
    <nameField>
        <displayFormat>BC-{0000}</displayFormat>
        <label>Broker Commission Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Broker Commissions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>