force-app/main/default/objects/Broker_Commission__c/fields/Communication_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Communication_Email_Address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Statement Distribution Emails</label>
    <type>TextArea</type>
</CustomField>