force-app/main/default/objects/Broker_Commission__c/fields/Flat_Dollar_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Flat_Dollar_Amount_Value__c</fullName>
    <label>Flat Dollar Amount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>