force-app/main/default/objects/Broker_Commission__c/fields/Pct_Profit_Value__c.field-meta.xml
<CustomField>
    <fullName>Pct_Profit_Value__c</fullName>
    <label>% of Profit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>