force-app/main/default/objects/Broker_Commission__c/fields/Prospect_Client__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prospect-Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Broker Commissions</relationshipLabel>
    <relationshipName>Broker_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>