force-app/main/default/objects/Broker_Commission__c/fields/Referral_Account__c.field-meta.xml
<CustomField>
    <fullName>Referral_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Account</label>
    <referenceTo>Referral_Account__c</referenceTo>
    <relationshipLabel>Broker Commissions</relationshipLabel>
    <relationshipName>Broker_Commissions</relationshipName>
    <type>Lookup</type>
</CustomField>