force-app/main/default/objects/Broker_Commission__c/fields/Referral_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Referral_Account_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>