force-app/main/default/objects/Broker_Commission__c/fields/Referral_Payment_Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Referral_Payment_Agreement_Type__c</fullName>
    <label>Referral Payment Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Revenue Share Standard</fullName>
            </value>
            <value>
                <fullName>Revenue Share Non-Standard Language</fullName>
            </value>
            <value>
                <fullName>Revenue Share Non-Standard Revenue</fullName>
            </value>
            <value>
                <fullName>Revenue Share Non-Standard Revenue/Language</fullName>
            </value>
            <value>
                <fullName>Acquisition - Standard</fullName>
            </value>
            <value>
                <fullName>Acquisition - Non-Standard Language</fullName>
            </value>
            <value>
                <fullName>Acquisition - w/ Rev Share</fullName>
            </value>
            <value>
                <fullName>Acquisition - w/ Rev Share Non-Standard Revenue</fullName>
            </value>
            <value>
                <fullName>Acquisition - w/ Rev Share Non-Standard Language</fullName>
            </value>
            <value>
                <fullName>Acquisition - w/ Rev Share Non-Standard Revenue/Language</fullName>
            </value>
            <value>
                <fullName>Broker-Revenue Share Standard</fullName>
            </value>
            <value>
                <fullName>Broker-Revenue Share With Addendum</fullName>
            </value>
            <value>
                <fullName>Broker- Revenue Share Legacy</fullName>
            </value>
            <value>
                <fullName>PEO-Revenue Share OASIS</fullName>
                <isActive>false</isActive>
                <label>PEO-Revenue Share OASIS</label>
            </value>
            <value>
                <fullName>PEO-Revenue Share Standard</fullName>
                <isActive>false</isActive>
                <label>PEO-Revenue Share Standard</label>
            </value>
            <value>
                <fullName>PEO-Revenue Share With Addendum</fullName>
                <isActive>false</isActive>
                <label>PEO-Revenue Share With Addendum</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>