force-app/main/default/objects/Broker_Commission__c/validationRules/Flat_Dollar_Amount_Value_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Flat_Dollar_Amount_Value_is_required</fullName>
    <active>true</active>
    <description>Flat Dollar Amount Value is required when commission method is Flat Dollar Amount</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Commission_Method__c,&apos;Flat&apos;),
  ISBLANK(Flat_Dollar_Amount_Value__c)


)</errorConditionFormula>
    <errorMessage>Flat Dollar Amount Value is required when commission method is Flat Dollar Amount</errorMessage>
</ValidationRule>