force-app/main/default/objects/Broker_Commission__c/validationRules/Per_Head_Amount_Value_is_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Per_Head_Amount_Value_is_required</fullName>
    <active>true</active>
    <description>Per Head Amount Value is required when commission method is Per Head Amount</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Commission_Method__c,&apos;PerHead&apos;),
  ISBLANK(Per_Head_Amount_Value__c)


)</errorConditionFormula>
    <errorMessage>Per Head Amount Value is required when commission method is Per Head Amount</errorMessage>
</ValidationRule>