force-app/main/default/objects/Broker_Commission__c/validationRules/Percent_of_Admin_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_of_Admin_required</fullName>
    <active>true</active>
    <description>Percent of Admin Value is required when commission method is % of Admin</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Commission_Method__c,&apos;PctAdmin&apos;),
  ISBLANK(Pct_Admin_Value__c )


)</errorConditionFormula>
    <errorMessage>Percent of Admin Value is required when commission method is % of Admin</errorMessage>
</ValidationRule>