force-app/main/default/objects/Broker_Commission__c/validationRules/Percent_of_Payroll_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Percent_of_Payroll_Required</fullName>
    <active>true</active>
    <description>Percent of Payroll Value is required when commission method is % of Payroll</description>
    <errorConditionFormula>AND(
     ISPICKVAL(Commission_Method__c,&apos;PctPayroll&apos;),
  ISBLANK(Pct_Payroll_Value__c )


)</errorConditionFormula>
    <errorMessage>Percent of Payroll Value is required when commission method is % of Payroll</errorMessage>
</ValidationRule>